<resources>
    <string name="app_name">网易云音乐v</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mmessage">我的消息</string>
    <string name="diantai">电台</string>
    <string name="zhibo">直播</string>
    <string name="paihanban">排行榜</string>
    <string name="gedan">歌单</string>
    <string name="meirituijian">每日推荐</string>
    <string name="zuozhe">作者:</string>
</resources>
