<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorbg"
    android:id="@+id/host_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <com.youth.banner.Banner
               android:layout_marginTop="10dp"
               android:id="@+id/host_bvp"
               android:layout_width="match_parent"
               android:layout_height="120dp"/>
           <LinearLayout
               android:layout_marginBottom="20dp"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <FrameLayout
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content">
                   <LinearLayout
                       android:gravity="center"
                       android:id="@+id/menu1"
                       android:layout_width="match_parent"

                       android:orientation="vertical"
                       android:layout_height="wrap_content">
                       <LinearLayout
                           android:gravity="center"
                           android:layout_width="wrap_content"
                           android:background="@drawable/home_menu"
                           android:layout_height="wrap_content">
                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@mipmap/icon_cal"/>
                       </LinearLayout>
                       <TextView
                           android:textColor="@color/colortv"
                           android:layout_marginTop="5dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/meirituijian"/>
                   </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/host_cal"
                   android:paddingBottom="17dp"
                    android:textColor="#FFFFFF"
                    android:textSize="10dp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"/>
            </RelativeLayout>
               </FrameLayout>
               <LinearLayout
                   android:orientation="vertical"
                   android:gravity="center"
                   android:id="@+id/menu2"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content">
                   <LinearLayout
                       android:orientation="vertical"
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:background="@drawable/home_menu"
                       android:layout_height="wrap_content">
                       <ImageView
                           android:layout_width="25dp"
                           android:layout_height="25dp"
                           android:src="@mipmap/icon_music"/>

                   </LinearLayout>
                   <TextView
                       android:textColor="@color/colortv"
                       android:layout_marginTop="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/gedan"/>
               </LinearLayout>
               <LinearLayout
                   android:gravity="center"
                   android:id="@+id/menu3"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:orientation="vertical"
                   android:layout_height="wrap_content">
                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:background="@drawable/home_menu"
                       android:layout_height="wrap_content">
                       <ImageView
                           android:layout_width="25dp"
                           android:layout_height="25dp"
                           android:src="@mipmap/icon_rank"/>
                   </LinearLayout>
                   <TextView
                       android:textColor="@color/colortv"
                       android:layout_marginTop="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/paihanban"/>
               </LinearLayout>
               <LinearLayout
                   android:orientation="vertical"
                   android:gravity="center"
                   android:id="@+id/menu4"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content">
                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:background="@drawable/home_menu"
                       android:layout_height="wrap_content">
                       <ImageView
                           android:layout_width="25dp"
                           android:layout_height="25dp"
                           android:src="@mipmap/icon_diantai"/>
                   </LinearLayout>
                   <TextView
                       android:textColor="@color/colortv"
                       android:layout_marginTop="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/diantai"/>
               </LinearLayout>
               <LinearLayout
                   android:orientation="vertical"
                   android:gravity="center"
                   android:id="@+id/menu5"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content">
                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="wrap_content"
                       android:background="@drawable/home_menu"
                       android:layout_height="wrap_content">
                       <ImageView
                           android:layout_width="25dp"
                           android:layout_height="25dp"
                           android:src="@mipmap/icon_line"/>
                   </LinearLayout>
                   <TextView
                       android:textColor="@color/colortv"
                       android:layout_marginTop="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/zhibo"/>
               </LinearLayout>

           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="2dp"
               android:layout_marginBottom="10dp"
               android:background="#cccccc"/>
           <RelativeLayout
               android:layout_marginTop="15dp"
               android:layout_marginBottom="10dp"
               xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:layout_alignParentLeft="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#000000"
                   android:text="推荐歌单"/>
               <Button
                   android:id="@+id/guanchan"
                   android:textColor="#000000"
                   android:background="@drawable/press_select"
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:layout_alignParentRight="true"
                   android:text="歌单广场"/>
           </RelativeLayout>
           <com.example.yt.myapplication.views.MessureGridview
               android:layout_marginBottom="30dp"
               android:horizontalSpacing="20dp"
               android:verticalSpacing="20dp"
               android:id="@+id/host_gv"
               android:numColumns="3"
               android:layout_width="match_parent"
               android:layout_height="200dp"/>


       </LinearLayout>
</ScrollView>